--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   node_3g_1:
-    image: base
+    image: wotsim
     privileged: true
     hostname: node_3g_1
     volumes:
@@ -9,7 +9,7 @@ services:
     networks:
       - network_3g
   node_3g_2:
-    image: base
+    image: wotsim
     privileged: true
     hostname: node_3g_2
     volumes:
@@ -17,17 +17,15 @@ services:
     networks:
       - network_3g
   gw_3g:
-    image: base
-    privileged: true
+    image: wotsim
+    command: ["sleep", "infinity"]
     hostname: gw_3g
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - network_3g
     labels:
       - "org.fundacionctic.wotsim.gw"
   node_cable_1:
-    image: base
+    image: wotsim
     privileged: true
     hostname: node_cable_1
     volumes:
@@ -35,7 +33,7 @@ services:
     networks:
       - network_cable
   node_cable_2:
-    image: base
+    image: wotsim
     privileged: true
     hostname: node_cable_2
     volumes:
@@ -43,17 +41,15 @@ services:
     networks:
       - network_cable
   gw_cable:
-    image: base
-    privileged: true
+    image: wotsim
+    command: ["sleep", "infinity"]
     hostname: gw_cable
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - network_cable
     labels:
       - "org.fundacionctic.wotsim.gw"
   node_3g_cable_1:
-    image: base
+    image: wotsim
     privileged: true
     hostname: node_3g_cable_1
     volumes:
