--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - network_3g
     depends_on:
       - docker_api_proxy
+      - gw_3g
   node_3g_2:
     image: wotsim
     privileged: true
@@ -35,6 +36,7 @@ services:
       - network_3g
     depends_on:
       - docker_api_proxy  
+      - gw_3g
   gw_3g:
     image: wotsim
     command: ["sleep", "infinity"]
@@ -51,6 +53,7 @@ services:
       - network_cable
     depends_on:
       - docker_api_proxy  
+      - gw_cable
   node_cable_2:
     image: wotsim
     privileged: true
@@ -58,7 +61,8 @@ services:
     networks:
       - network_cable
     depends_on:
-      - docker_api_proxy 
+      - docker_api_proxy
+      - gw_cable
   gw_cable:
     image: wotsim
     command: ["sleep", "infinity"]
@@ -76,6 +80,8 @@ services:
       - network_cable
     depends_on:
       - docker_api_proxy
+      - gw_cable
+      - gw_3g
 networks:
   network_3g:
     driver: overlay
