--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - network_3g
   gw_cable:
     image: wotsim
-    command: ["gateway"]
+    command: ["gateway", "delay --time 5 --jitter 1 --distribution normal"]
     privileged: true
     hostname: gw_cable
     volumes:
@@ -30,7 +30,7 @@ services:
       - "org.fundacionctic.wotsim.gw"
   gw_wifi:
     image: wotsim
-    command: ["gateway"]
+    command: ["gateway", "delay --time 15 --jitter 10 --distribution normal"]
     privileged: true
     hostname: gw_wifi
     volumes:
@@ -41,7 +41,7 @@ services:
       - "org.fundacionctic.wotsim.gw"
   gw_3g:
     image: wotsim
-    command: ["gateway"]
+    command: ["gateway", "delay --time 100 --jitter 50 --distribution normal", "rate --rate 200kbit"]
     privileged: true
     hostname: gw_3g
     volumes:
