--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,13 @@ services:
     networks:
       - network_wifi
       - network_cable
-      - network_3g
+      - network_3g_broker
+  redis:
+    image: redis:5
+    networks:
+      - network_wifi
+      - network_cable
+      - network_3g_broker
   gw_cable:
     image: wotsim
     command: ["gateway", "delay --time 5 --jitter 1 --distribution normal"]
@@ -44,7 +50,7 @@ services:
       - "org.fundacionctic.wotsim.gw"
     environment:
       - PATCH_PRIVILEGED=1
-  gw_3g:
+  gw_3g_broker:
     image: wotsim
     command:
       [
@@ -57,14 +63,21 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
-      - network_3g
+      - network_3g_broker
     labels:
       - "org.fundacionctic.wotsim.gw"
     environment:
       - PATCH_PRIVILEGED=1
   node_wifi_1:
     image: wotsim
-    command: ["node"]
+    command:
+      [
+        "app",
+        "--path",
+        "/root/wotsim/examples/time_app.py",
+        "--enable-http",
+        "--enable-coap",
+      ]
     privileged: true
     hostname: "{{.Task.Name}}"
     networks:
@@ -76,11 +89,23 @@ services:
       - PATCH_PRIVILEGED=1
   node_wifi_2:
     image: wotsim
-    command: ["node"]
+    command:
+      [
+        "app",
+        "--path",
+        "/root/wotsim/examples/subscriber_app.py",
+        "--func-param",
+        "servient_host",
+        "node_wifi_cable_1.network_wifi",
+        "--func-param",
+        "thing_id",
+        "urn:org:fundacionctic:thing:time",
+      ]
     privileged: true
     hostname: "{{.Task.Name}}"
     networks:
       - network_wifi
+      - network_3g_broker
     depends_on:
       - docker_api_proxy
       - gw_wifi
@@ -88,58 +113,61 @@ services:
       - PATCH_PRIVILEGED=1
   node_cable_1:
     image: wotsim
-    command: ["node"]
+    command:
+      ["app", "--path", "/root/wotsim/examples/time_app.py", "--enable-ws"]
     privileged: true
     hostname: "{{.Task.Name}}"
     networks:
       - network_cable
-      - network_3g
+      - network_3g_broker
     depends_on:
       - docker_api_proxy
       - gw_cable
-      - gw_3g
+      - gw_3g_broker
     environment:
       - PATCH_PRIVILEGED=1
-      - MQTT_BROKER=mqtt://broker_1.network_3g
   node_cable_2:
     image: wotsim
-    command: ["node"]
+    command:
+      ["app", "--path", "/root/wotsim/examples/time_app.py", "--enable-ws"]
     privileged: true
     hostname: "{{.Task.Name}}"
     networks:
       - network_cable
-      - network_3g
+      - network_3g_broker
     depends_on:
       - docker_api_proxy
       - gw_cable
-      - gw_3g
+      - gw_3g_broker
     environment:
       - PATCH_PRIVILEGED=1
-      - MQTT_BROKER=mqtt://broker_1.network_3g
   node_wifi_cable_1:
     image: wotsim
-    command: ["node"]
+    command:
+      ["app", "--path", "/root/wotsim/examples/time_app.py", "--enable-mqtt"]
     privileged: true
     hostname: "{{.Task.Name}}"
     networks:
       - network_wifi
       - network_cable
+      - network_3g_broker
     depends_on:
       - docker_api_proxy
       - gw_cable
       - gw_wifi
     environment:
       - PATCH_PRIVILEGED=1
+      - MQTT_BROKER_HOST=broker_1.network_3g_broker
   broker_1:
     image: wotsim
     command: ["broker"]
     privileged: true
     hostname: "{{.Task.Name}}"
     networks:
-      - network_3g
+      - network_3g_broker
     depends_on:
       - docker_api_proxy
-      - gw_3g
+      - gw_3g_broker
     environment:
       - PATCH_PRIVILEGED=1
 networks:
@@ -155,9 +183,9 @@ networks:
     attachable: true
     labels:
       - "org.fundacionctic.wotsim.net"
-  network_3g:
+  network_3g_broker:
     driver: overlay
-    name: network_3g
+    name: network_3g_broker
     attachable: true
     labels:
       - "org.fundacionctic.wotsim.net"
